--- a/index.html
+++ b/index.html
@@ -37,13 +37,39 @@
   <div class="navbar-brand">
     <a class="nav-link" href="#" id="nav-all">Hack or Snooze</a>
   </div>
+  <div class="nav-left hidden">
+    <a class="nav-link" href="#" id="nav-submit">Submit</a>
+      <span>|</span>
+    <a class="nav-link" href="#" id="nav-favorites">Favorites</a>
+      <span>|</span>
+    <a class="nav-link" href="#" id="nav-my-stories">My Stories</a>
+  </div>
   <div class="nav-right">
     <a class="nav-link" href="#" id="nav-login">login/signup</a>
     <a class="nav-link" href="#" id="nav-user-profile"></a>
     <a class="hidden" id="nav-logout" href="#"><small>(logout)</small></a>
   </div>
+  
 </nav>
-
+<form
+action=""
+id="ad-story-form"
+class="ad-story-form hidden">
+<h4>New Story</h4>
+<div class="login-input">
+<label for="title">Title</label>
+<input id="story-title" autocapitalize="words">
+</div>
+<div class="login-input">
+<label for="signup-username">Author</label>
+<input id="story-author" autocapitalize="words">
+</div>
+<div class="login-input">
+<label for="story-url">URL</label>
+<input id="story-url">
+</div>
+<button type="submit">Submit Story</button>
+</form>
 <!-- area for stories (all stories, user stories, favorites) -->
 <section class="stories-container container">
 
